# shenghui-gongzhonghao

./: .gitignore  DEPLOY.md  MIGRATION_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json  test_report.md
backend/: .dockerignore  .env.example  .env.example.title_generation  .env.production.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  run_mining.py
backend/alembic/: env.py
backend/alembic/versions/: 155a29b4aa94_init_schema_with_v2_topic_mining_tables.py  20260522_add_outline_tables.py  20260522_add_phone_to_users.py  20260523_add_is_ai_relevant_on_info_clusters.py  20260527_add_generation_records.py  20260527_make_info_cluster_id_nullable.py  20260529_add_b_summary.py  20260529_add_latest_title.py  20260530_add_candidate_summary.py  22ab956b7d3b_merge_heads.py  9d2ac59877e5_add_style_sources_table_and_update_.py  b1e38652277b_add_embedding_vector_columns.py  e55bc58b6a7b_add_business_sensitive_on_topic_.py  f7a1b2c3d4e5_merge_mining_and_style_heads.py  fff298cde66a_add_zh_translation_fields_on_info_.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  agent_a.py  agent_b.py  agent_c.py  agent_d.py  base.py
backend/app/api/: deps.py
backend/app/core/: celery_app.py  config.py  logging.py  (+3 more)
backend/scripts/: create_title_tables.py  fix_freshness.py  init_pgvector.sql  smoke_title_generation.py
backend/tests/: conftest.py  test_agent_a.py  test_agent_b.py  test_agent_c.py  test_agent_d.py  test_api.py  test_integration.py  test_outline_generation.py  test_schemas.py  test_topic_mining.py
(+294 files in other folders)
