[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-content-hub-backend"
version = "1.0.0"
description = "AI公众号内容运营平台后端服务"
authors = [
    {name = "Kou Dou Ma", email = "koudouma@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "pydantic>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "beautifulsoup4>=4.12.2",
    "scrapy>=2.11.0",
    "feedparser>=6.0.11",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "openai>=1.6.1",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.8.0"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
known_first_party = ["app"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]